--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,6 @@ NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=c8f9c2c3c3e7a8b0f0a9b123456789ab
 NEXT_PUBLIC_TIERED_BADGE_ADDRESS=0xaB4afb28Bc32141c8A13489aD478F91eCC3A1712
 NEXT_PUBLIC_SUBSCRIPTION_MANAGER_ADDRESS=0xB0364352466bfC41e1AD33E1e46915a1622eeA28
 NEXT_PUBLIC_GATED_CONTENT_ADDRESS=0x52Ed1672eC08Bf55D69A983e1Fa144Ce4308Ea72
+
+NEXT_PUBLIC_API_URL=https://api.example.com
+
