--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.10",
     "@tanstack/react-query": "^5.90.12",
+    "@walletconnect/ethereum-provider": "^2.23.3",
+    "@walletconnect/sign-client": "^2.23.3",
+    "@walletconnect/universal-provider": "^2.23.3",
     "next": "16.1.0",
     "postcss": "^8.5.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "viem": "^2.43.2",
     "wagmi": "^2.19.5"
   },
