--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@walletconnect/ethereum-provider": "^2.23.3",
     "@walletconnect/sign-client": "^2.23.3",
     "@walletconnect/universal-provider": "^2.23.3",
+    "autoprefixer": "^10.4.23",
     "next": "16.1.0",
     "postcss": "^8.5.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "tailwindcss": "^4.1.18",
     "viem": "^2.43.2",
     "wagmi": "^2.19.5"
   },
@@ -28,7 +30,6 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
-    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
