--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,33 @@
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build outputs
 cache/
 out/
-node_modules/
+.next/
+build/
+dist/
+
+# Environment files
 .env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# Foundry
+SmartContract/cache/
+SmartContract/out/
+SmartContract/broadcast/
