--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.10",
+    "@supabase/supabase-js": "^2.91.0",
     "@tanstack/react-query": "^5.90.12",
     "@walletconnect/ethereum-provider": "^2.23.3",
     "@walletconnect/sign-client": "^2.23.3",
     "@walletconnect/universal-provider": "^2.23.3",
     "autoprefixer": "^10.4.23",
+    "ethers": "^6.16.0",
     "next": "16.1.0",
     "postcss": "^8.5.6",
     "react": "^18.0.0",
